# vigil

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Makefile  README.md  go.mod  go.sum  sonar-project.properties  test_argparse_hang.py
.github/workflows/: build.yml  complexity.yml  coverage.yml  perf.yml  sonarqube.yml
benchmarks/: README.md  bench_python.py  bench_vigil.py  manifest.json  thresholds.json
benchmarks/cases/: check_checker_stress.vigil  run_csv_roundtrip.vigil  run_fib.vigil  run_math_ops.vigil  run_parse_ops.vigil  run_regex_scan.vigil  run_vm_arith.vigil
cmd/basl/: bundle.go  bundle_lib.go  check.go  check_test.go  dap.go  debug.go  depcmd.go  doc.go  doc_test.go  editor.go  editor_semantic.go  editor_test.go  embed.go  help.go  help_test.go  lsp.go  main.go  manifest.go  new.go  package.go  package_test.go  project.go  project_test.go
complexity/: README.md  thresholds.json
complexity/debt/: README.md  lizard-summary.json
coverage/: README.md  test_surface.json  thresholds.json
docs/: bundle_cli.md  check.md  cli.md  debugger.md  dependencies.md  doc_cli.md  editor_cli.md  embed.md  fmt_design.md  help_cli.md  help_doc_cli.md  implement_strong_typing.md  maintainer_guide.md  package_cli.md  performance.md  project_structure.md  runbook.md  standard_library_candidates.md  stdlib-portability.md  syntax.md
docs/stdlib/: README.md  archive.md  args.md  base64.md  compress.md  crypto.md  csv.md  ffi.md  file.md  fmt.md  gui-api-freeze-v0.1.3.md  gui-roadmap.md  gui.md  hash.md  hex.md  http.md  io.md  json.md  log.md  math.md  mime.md  mutex.md  os.md  parse.md  path.md  rand.md  regex.md  sort.md  sqlite.md  strings.md  tcp.md  test.md  thread.md  time.md  udp.md  unsafe.md  xml.md
editors/: assets.go
editors/vim/: README.md
editors/vscode/: completions.json  extension.js  language-configuration.json  package.json  stdlib.json
examples/: README.md  STDLIB_ENHANCEMENTS.md  UNIX_TOOLS_2_ASSESSMENT.md  UNIX_TOOLS_2_COMPLETE.md  UNIX_UTILS.md  argparse_example.basl  argparse_example.vigil  atomic_stress_test.basl  atomic_stress_test.vigil  classes.basl  classes.vigil  cli_arg_stress_test.basl  cli_arg_stress_test.vigil  cli_tool.basl  cli_tool.vigil  collections.basl  collections.vigil  compress_stress_test.vigil  concurrency.basl  concurrency.vigil  database.basl  database.vigil  error_handling.basl  error_handling.vigil  file_operations.basl  file_operations.vigil  fmt_stress_test.basl  fmt_stress_test.vigil  fs_stress_test.vigil  gui_hello.basl  gui_hello.vigil  hello.basl  http_server.basl  http_server.vigil  json_parsing.basl  json_parsing.vigil  math_stress_test.basl  math_stress_test.vigil  regex_patterns.basl  regex_patterns.vigil  (+5 more)
examples/basl-cat/: README.md  basl.toml  main.basl
examples/basl-chmod/: basl.toml  main.basl
examples/basl-cp/: basl.toml  main.basl
examples/basl-cut/: basl.toml  main.basl
examples/basl-grep/: LIMITATIONS.md  README.md  basl.toml  main.basl  test_args.basl
examples/basl-ln/: basl.toml  main.basl
examples/basl-ls/: basl.toml  main.basl
examples/basl-mkdir/: basl.toml  main.basl
examples/basl-mv/: basl.toml  main.basl
examples/basl-nl/: basl.toml  main.basl
examples/basl-paste/: basl.toml  main.basl
examples/basl-rm/: basl.toml  main.basl
examples/basl-rmdir/: basl.toml  main.basl
examples/basl-sort/: basl.toml
examples/basl-tee/: README.md  basl.toml  main.basl
examples/basl-touch/: basl.toml  main.basl
examples/basl-tr/: basl.toml  main.basl
examples/basl-uniq/: basl.toml  main.basl
examples/basl-wc/: README.md  basl.toml  main.basl
examples/http-cat/: README.md  basl.toml  main.basl
examples/test_programs/: basl.toml  main.basl
examples/vigil-cat/: README.md  main.vigil  vigil.toml
examples/vigil-chmod/: main.vigil  vigil.toml
examples/vigil-cp/: main.vigil  vigil.toml
examples/vigil-cut/: main.vigil  vigil.toml
examples/vigil-grep/: LIMITATIONS.md  README.md  main.vigil  test.txt  vigil.toml
examples/vigil-ln/: main.vigil  vigil.toml
examples/vigil-ls/: main.vigil  vigil.toml
integration_tests/: test_args.py  test_atomic.py  test_check.py  test_compress.py  test_crypto.py  test_csv.py  test_debug.py  test_debug_dap.py  test_debugger.py  test_doc.py  test_embed.py  test_fmt.py  test_fs.py  test_log.py  test_math.py  test_net.py  test_new.py  test_package.py  test_parse.py  test_pkg.py  test_random.py  test_regex.py  test_regression.py  test_repl.py  test_stdlib_availability.py  test_string_methods.py  test_syntax_integration.py  test_test.py  test_thread.py  test_time.py  test_url.py  test_yaml.py
scripts/: cert_to_header.py  check_clang_tidy.py  check_complexity.py  check_core_portability.py  check_coverage.py  check_stdlib_portability.py  check_test_surface.py  compare_benchmarks.py  generate_coverage_reports.sh  run_benchmarks.py  run_clang_format.sh  run_clang_tidy.sh
src/: allocator.c  array.c  basl.c  binding.c  checker.c  chunk.c  cli_frontend.c  cli_lib.c  cli_test.c  compiler.c  compiler_builtins.c  compiler_constants.inc  compiler_declarations.c  compiler_program.c  compiler_strings.c  compiler_typeparsing.c  compiler_types.c  dap.c  debug_info.c  debugger.c  diagnostic.c  doc.c  doc_registry.c  embed.c  ffi_callback.c  ffi_trampoline.c  fmt.c  json.c  jsonrpc.c  lexer.c  log.c  lsp.c  map.c  native_module.c  package.c  pkg.c  runtime.c  semantic.c  source.c  status.c  (+18 more)
tests/: array_test.c  array_test.cpp  basl_new_test.c  basl_new_test.cpp  basl_test.h  binding_test.c  binding_test.cpp  checker_test.c  checker_test.cpp  chunk_test.c  chunk_test.cpp  cli_frontend_test.c  cli_lib_test.c  cli_lib_test.cpp  compiler_test.c  compiler_test.cpp  dap_test.c  dap_test.cpp  debug_info_test.c  debug_info_test.cpp  debugger_test.c  debugger_test.cpp  diagnostic_test.c  diagnostic_test.cpp  doc_registry_test.c  doc_test.c  doc_test.cpp  ffi_test.c  ffi_testlib.c  fs_test.c  http_test.c  json_test.c  json_test.cpp  lexer_test.c  lexer_test.cpp  line_editor_internal_test.c  log_test.c  log_test.cpp  lsp_test.c  map_test.c  (+35 more)
(+322 files in other folders)
